--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">82</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T28_Sepulcher/oblivion_jailer.png">The Jailer</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T28_Sepulcher/oblivion_jailer.png">The Jailer</td>
                             <td>295</td>
                             <td>May 05, 2022</td>
                             </tr>
@@ -113,7 +113,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">93</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T27_Sanctum/oblivion_sylvanas.png">Sylvanas Windrunner</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T27_Sanctum/oblivion_sylvanas.png">Sylvanas Windrunner</td>
                             <td>101</td>
                             <td>Aug 12, 2021</td>
                             </tr>
