--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">72</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T26_Nathria/oblivion_denathrius.png">Sire Denathrius</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T26_Nathria/oblivion_denathrius.png">Sire Denathrius</td>
                             <td>67</td>
                             <td>Jan 27, 2021</td>
                             </tr>
@@ -131,7 +131,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">49</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T25_Nyalotha/nzoth.jpg">N'Zoth the Corruptor</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T25_Nyalotha/nzoth.jpg">N'Zoth the Corruptor</td>
                         <td>133</td>
                         <td>Mar 4, 2020</td>
                         </tr>
@@ -140,21 +140,21 @@
                         </tr>
                         <tr>
                             <td class="world-rank">47</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T24_EternalPalace/azshara.png">Queen Azshara</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T24_EternalPalace/azshara.png">Queen Azshara</td>
                         <td>154</td>
                         <td>Aug 25, 2019</td>
                         </tr>
                         <tr><td colspan="4"><strong>Crucible of Storms</strong></td></tr>
                     <tr>
                         <td class="world-rank">24</td>
-                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T23_CrucibleOfStorms/uunat.png">Uu'nat, Harbinger of the Void</td>
+                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T23_CrucibleOfStorms/uunat.png">Uu'nat, Harbinger of the Void</td>
                         <td>298</td>
                         <td>May 16, 2019</td>
                     </tr>
                     <tr><td colspan="4"><strong>Battle of Dazar'alor</strong></td></tr>
                     <tr>
                         <td class="world-rank">53</td>
-                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T23_BattleOfDazaralor/jaina.jpg">Jaina Proudmoore</a></td>
+                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T23_BattleOfDazaralor/jaina.jpg">Jaina Proudmoore</a></td>
                             <td>246</td>
                             <td>Mar 3, 2019</td>
                         </tr>
@@ -162,7 +162,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">104</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T22_Uldir/ghuun.jpg">G'huun</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T22_Uldir/ghuun.jpg">G'huun</a></td>
                             <td>114</td>
                             <td>Oct 14, 2018</td>
                         </tr>
@@ -170,7 +170,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">68</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T21_Antorus/argus.png">Argus the Unmaker</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T21_Antorus/argus.png">Argus the Unmaker</a></td>
                             <td>222</td>
                             <td>Jan 24, 2018</td>
                         </tr>
@@ -178,7 +178,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">58</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T20_TombOfSargeras/kiljaeden.png">Kil'jaeden</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T20_TombOfSargeras/kiljaeden.png">Kil'jaeden</a></td>
                             <td>364</td>
                             <td>Sep 13, 2017</td>
                         </tr>
@@ -186,19 +186,19 @@
                         </tr>
                         <tr>
                             <td class="world-rank">89</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T19_Nighthold/guldan.png">Gul'dan</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_Nighthold/guldan.png">Gul'dan</a></td>
                             <td>155</td>
                             <td>Apr 5, 2017</td>
                         </tr>
                         <tr>
                             <td class="world-rank">247</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T19_TrialOfValor/helya.png">Helya</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_TrialOfValor/helya.png">Helya</a></td>
                             <td>180</td>
                             <td>Jan 12, 2017</td>
                         </tr>
                         <tr>
                             <td class="world-rank">355</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T19_EmeraldNightmare/xavius.jpg">Xavius</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_EmeraldNightmare/xavius.jpg">Xavius</a></td>
                             <td>5</td>
                             <td>Oct 27, 2016</td>
                         </tr>
@@ -207,7 +207,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">130</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T18_HellfireCitadel/kilrogg.jpg">Kilrogg Deadeye</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T18_HellfireCitadel/kilrogg.jpg">Kilrogg Deadeye</a></td>
                             <td>?</td>
                             <td>Jul 12, 2015</td>
                         </tr>
@@ -215,13 +215,13 @@
                         </tr>
                         <tr>
                             <td class="world-rank">77</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T17_BlackrockFoundry/blackhand.png">Blackhand</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_BlackrockFoundry/blackhand.png">Blackhand</a></td>
                             <td>220</td>
                             <td>Mar 28, 2015</td>
                         </tr>
                         <tr>
                             <td class="world-rank">124</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T17_Highmaul/margok.jpg">Imperator Mar'gok</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_Highmaul/margok.jpg">Imperator Mar'gok</a></td>
                             <td>?</td>
                             <td>Jan 12, 2015</td>
                         </tr>
@@ -229,7 +229,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">534</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T16_SiegeOfOrgrimmar/garrosh25.jpg">Garrosh Hellscream (25)</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T16_SiegeOfOrgrimmar/garrosh25.jpg">Garrosh Hellscream (25)</a></td>
                             <td>?</td>
                             <td>Jun 10, 2014</td>
                         </tr>
@@ -237,7 +237,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">753</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow.github.io/oblivionguild/master/assets/media/T15_ThroneOfThunder/raden.png">Ra-den (10)</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T15_ThroneOfThunder/raden.png">Ra-den (10)</a></td>
                             <td>?</td>
                             <td>Aug 14, 2013</td>
                         </tr>
