--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
 
-        <!-- OnClick function was: window.open('https://docs.google.com/forms/d/1l9cmVak1sj0khKXrwM1TPaDcbWHRt3GA8wIcr7lhYjU', '_blank') -->
+        <!-- OnClick function was: window.open('https://docs.google.com/forms/d/1l9cmVak1sj0khKXrwM1TPaDcbWHRt3GA8wIcr7lhYjU/viewform?edit_requested=true', '_blank') -->
         <button onclick="" class="button">
             <a class="apply" target="_blank" rel="noopener noreferrer">APPLY</a>
         </button>
