--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T18_HellfireCitadel/kilrogg.jpg">Kilrogg Deadeye</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T18_HellfireCitadel/archimonde.jpg">Archimonde</a></td>
                             <td>???</td>
                             <td>Jul 12, 2015</td>
                         </tr>
-                            <td colspan="4"><strong>Highmaul, Blackrock Foundry</strong></td>
+                            <td colspan="4"><strong>Blackrock Foundry, Highmaul</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
