--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -934,7 +934,7 @@
             <img src="../assets/media/Tiers/ToS.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Tomb of Sargeras</p>
-                <p class="world-rank">58</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -944,7 +944,7 @@
                     <p>Kil'jaeden</p>
                     <a href="https://www.youtube.com/watch?v=gGZh_A1cPjc" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">58</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 364</p>
                         <p class="subtitle">Sep 13, 2017</p>
@@ -1029,7 +1029,7 @@
             <img src="../assets/media/Tiers/Nighthold.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">The Nighthold</p>
-                <p class="world-rank">89</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1039,7 +1039,7 @@
                     <p>Gul'dan</p>
                     <a href="https://www.youtube.com/watch?v=oKR1ygzdRcs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">89</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 155</p>
                         <p class="subtitle">Apr 5, 2017</p>
@@ -1132,7 +1132,7 @@
             <img src="../assets/media/Tiers/ToV.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Trial of Valor</p>
-                <p class="world-rank">247</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1142,7 +1142,7 @@
                     <p>Helya</p>
                     <a href="https://www.youtube.com/watch?v=10QMx_4HmoI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">247</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 180</p>
                         <p class="subtitle">Jan 12, 2017</p>
@@ -1173,7 +1173,7 @@
             <img src="../assets/media/Tiers/EN.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">The Emerald Nightmare</p>
-                <p class="world-rank">355</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1181,7 +1181,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Xavius</p>
-                    <p class="world-rank">355</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 5</p>
                         <p class="subtitle">Oct 27, 2016</p>
@@ -1244,17 +1244,17 @@
             <img src="../assets/media/Tiers/HFC.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Hellfire Citadel</p>
-                <p class="world-rank">-</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
 
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
-                    <p>Kilrogg Deadeye</p>
+                    <p>Archimonde</p>
                     <a href="https://www.youtube.com/watch?v=KhaUEtUjXsA" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">130</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
                         <p class="subtitle">Jul 12, 2015</p>
@@ -1308,7 +1308,7 @@
             <img src="../assets/media/Tiers/BRF.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Blackrock Foundry</p>
-                <p class="world-rank">77</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1316,7 +1316,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Blackhand</p>
-                    <p class="world-rank">77</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 220</p>
                         <p class="subtitle">Mar 28, 2015</p>
@@ -1415,7 +1415,7 @@
             <img src="../assets/media/Tiers/HM.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Highmaul</p>
-                <p class="world-rank">124</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1423,7 +1423,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Imperator Mar'gok</p>
-                    <p class="world-rank">124</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
                         <p class="subtitle">Jan 12, 2015</p>
@@ -1486,7 +1486,7 @@
             <img src="../assets/media/Tiers/SoO.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Siege of Orgrimmar</p>
-                <p class="world-rank">534</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1496,7 +1496,7 @@
                     <p>Garrosh Hellscream (25)</p>
                     <a href="https://www.youtube.com/watch?v=6slg_cG0IDo" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">534</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
                         <p class="subtitle">Jun 10, 2014</p>
@@ -1615,7 +1615,7 @@
             <img src="../assets/media/Tiers/ToT.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Throne of Thunder</p>
-                <p class="world-rank">753</p>
+                <p class="world-rank">???</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1623,7 +1623,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Ra'den</p>
-                    <p class="world-rank">753</p>
+                    <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
                         <p class="subtitle">Aug 14, 2013</p>
