--- a/pages/roster.html
+++ b/pages/roster.html
@@ -146,7 +146,7 @@
 
             <div class="player-card">
                 <img class="germany">
-                <strong class="priest">Dang</strong>
+                <strong class="priest">DANG</strong>
                 <img class="class priest">
             </div>
 
