--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">129</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_Nighthold/guldan.png">Gul'dan</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_Nighthold/oblivion_guldan.png">Gul'dan</a></td>
                             <td>287</td>
                             <td>Apr 12, 2017</td>
                         </tr>
@@ -214,13 +214,13 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_BlackrockFoundry/blackhand.png">Blackhand</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_BlackrockFoundry/oblivion_blackhand.png">Blackhand</a></td>
                             <td>???</td>
                             <td>Apr 12, 2015</td>
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_Highmaul/margok.jpg">Imperator Mar'gok</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_Highmaul/oblivion_margok.png">Imperator Mar'gok</a></td>
                             <td>???</td>
                             <td>Jan 22, 2015</td>
                         </tr>
@@ -228,7 +228,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T16_SiegeOfOrgrimmar/garrosh25.jpg">Garrosh Hellscream (25)</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T16_SiegeOfOrgrimmar/oblivion_garrosh25.png">Garrosh Hellscream (25)</a></td>
                             <td>???</td>
                             <td>Nov 25, 2013</td>
                         </tr>
