--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">72</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T26_Nathria/oblivion_denathrius.png">Sire Denathrius</td>
+                            <td>Sire Denathrius</td>
                             <td>102</td>
                             <td>Jan 27, 2021</td>
                             </tr>
@@ -130,7 +130,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">110</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T25_Nyalotha/nzoth.jpg">N'Zoth the Corruptor</td>
+                            <td>N'Zoth the Corruptor</td>
                         <td>212</td>
                         <td>Mar 12, 2020</td>
                         </tr>
@@ -139,21 +139,21 @@
                         </tr>
                         <tr>
                             <td class="world-rank">114</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T24_EternalPalace/azshara.png">Queen Azshara</td>
+                            <td>Queen Azshara</td>
                         <td>293</td>
                         <td>Sep 05, 2019</td>
                         </tr>
                         <tr><td colspan="4"><strong>Crucible of Storms</strong></td></tr>
                     <tr>
                         <td class="world-rank">85</td>
-                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T23_CrucibleOfStorms/uunat.png">Uu'nat, Harbinger of the Void</td>
+                        <td>Uu'nat, Harbinger of the Void</td>
                         <td>454</td>
                         <td>Jun 02, 2019</td>
                     </tr>
                     <tr><td colspan="4"><strong>Battle of Dazar'alor</strong></td></tr>
                     <tr>
                         <td class="world-rank">96</td>
-                        <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T23_BattleOfDazaralor/jaina.jpg">Jaina Proudmoore</a></td>
+                        <td>Jaina Proudmoore</td>
                             <td>319</td>
                             <td>Mar 07, 2019</td>
                         </tr>
@@ -161,7 +161,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">140</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T22_Uldir/ghuun.jpg">G'huun</a></td>
+                            <td>G'huun</td>
                             <td>268</td>
                             <td>Oct 21, 2018</td>
                         </tr>
@@ -169,7 +169,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">78</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T21_Antorus/argus.png">Argus the Unmaker</a></td>
+                            <td>Argus the Unmaker</td>
                             <td>370</td>
                             <td>Jan 25, 2018</td>
                         </tr>
@@ -177,7 +177,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">83</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T20_TombOfSargeras/kiljaeden.png">Kil'jaeden</a></td>
+                            <td>Kil'jaeden</td>
                             <td>533</td>
                             <td>Sep 18, 2017</td>
                         </tr>
@@ -191,13 +191,13 @@
                         </tr>
                         <tr>
                             <td class="world-rank">116</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_TrialOfValor/helya.png">Helya</a></td>
+                            <td>Helya</td>
                             <td>447</td>
                             <td>Jan 02, 2017</td>
                         </tr>
                         <tr>
                             <td class="world-rank">102</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T19_EmeraldNightmare/xavius.jpg">Xavius</a></td>
+                            <td>Xavius</td>
                             <td>41</td>
                             <td>Oct 13, 2016</td>
                         </tr>
@@ -206,7 +206,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T18_HellfireCitadel/archimonde.jpg">Archimonde</a></td>
+                            <td>Archimonde</td>
                             <td>???</td>
                             <td>Sep 28, 2015</td>
                         </tr>
@@ -236,7 +236,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T15_ThroneOfThunder/raden.png">Ra-den (10)</a></td>
+                            <td>Ra-den (10)</td>
                             <td>???</td>
                             <td>Jun 03, 2013</td>
                         </tr>
