--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
-                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T8_Ulduar/oblivion_yoggsaron.png">Nefarian</a></td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T8_Ulduar/oblivion_yoggsaron.png">Yogg-Saron</a></td>
                             <td>???</td>
                             <td>???</td>
                         </tr>
