Add Sanctum videos

--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -188,6 +188,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Sylvanas Windrunner</p>
+                    <a href="https://www.youtube.com/watch?v=9uc5u_ImUs8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">93</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 101</p>
@@ -196,7 +197,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Kel'Thuzad</p>
-
+                    <a href="https://www.youtube.com/watch?v=8OPFbdt7u5s" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">80</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 19</p>
@@ -205,7 +206,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Fatescribe Roh-Kalo</p>
-
+                    <a href="https://www.youtube.com/watch?v=gO3z0NRuYfQ" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">81</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 15</p>
@@ -214,7 +215,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Guardian of the First Ones</p>
-
+                    <a href="https://www.youtube.com/watch?v=GqAjmrmOHrs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">79</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 13</p>
@@ -223,7 +224,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Painsmith Raznal</p>
-
+                    <a href="https://www.youtube.com/watch?v=NeQBUpGBjU8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">92</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 103</p>
@@ -232,7 +233,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Soulrender Dormazain</p>
-
+                    <a href="https://www.youtube.com/watch?v=AcvZPWV7dog" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">97</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 19</p>
@@ -241,7 +242,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Remnant of Ner'zhul</p>
-
+                    <a href="https://www.youtube.com/watch?v=blJb4weHg9s" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">71</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 22</p>
@@ -250,7 +251,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Nine</p>
-
+                    <a href="https://www.youtube.com/watch?v=ZMLlfmgLNrI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">54</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 5</p>
@@ -259,7 +260,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Eye of the Jailer</p>
-
+                    <a href="https://www.youtube.com/watch?v=BQHH-ge8a1M" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">72</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 3</p>
@@ -268,7 +269,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Tarragrue</p>
-                    
+                    <a href="https://www.youtube.com/watch?v=9n_d5RzZw4o" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>                    
                     <p class="world-rank">450</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 0</p>
