Add Eternal Palace videos

--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -518,8 +518,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Queen Azshara</p>
-                    <a href="https://www.youtube.com/watch?v=lTnY3tjsxI8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=ZPKThRC1hgw" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">114</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 154</p>
@@ -528,8 +527,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Za'qul, Harbinger of Ny'alotha</p>
-                    <a href="https://www.youtube.com/watch?v=Ms8aBcaf2rg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=Zw94dnFXcZg" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">117</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 99</p>
@@ -538,8 +536,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Queen's Court</p>
-                    <a href="https://www.youtube.com/watch?v=BVnfPfEbRwI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=SVU-OKGL3Y4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">136</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 45</p>
@@ -548,8 +545,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Orgozoa</p>
-                    <a href="https://www.youtube.com/watch?v=_pOxPWq43Es" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=ESuGq0QjoYA" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">87</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 44</p>
@@ -559,6 +555,7 @@
                 <div id="boss-container" class="flex-col">
                     <p>Lady Ashavane</p>
                     <p class="world-rank">57</p>
+                    <a href="https://www.youtube.com/watch?v=MT1bBymVMyE" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 46</p>
                         <p class="subtitle">Jul 19, 2019</p>
@@ -566,6 +563,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Radiance of Azshara</p>
+                    <a href="https://www.youtube.com/watch?v=Nl8UUIwdNas" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">143</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 1</p>
@@ -574,6 +572,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Blackwater Behemoth</p>
+                    <a href="https://www.youtube.com/watch?v=kTHCVTopdbs" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">150</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 2</p>
@@ -582,6 +581,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Abyssal Commander Sivaz</p>
+                    <a href="https://www.youtube.com/watch?v=8AdsZur8CNs" target="_blank" data-tooltip="Twitter" data-position="bottom" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">212</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 3</p>
