--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -606,8 +606,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Uu'nat</p>
-                    <a href="https://www.youtube.com/watch?v=3wkZgk-P1g8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=L_vuSMZuquA" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">85</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 298</p>
@@ -616,8 +615,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>The Restless Cabal</p>
-                    <a href="https://www.youtube.com/watch?v=4nsuwWxop4Y" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
+                    <a href="https://www.youtube.com/watch?v=YMWT8g6Q-Bk" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">95</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 111</p>
