--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
-        <a class="github-link display-desktop" href="https://github.com/oblivionguild" target="_blank" rel="noopener noreferrer"><span class="flex-row">View on GitHub<i
+        <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild" target="_blank" rel="noopener noreferrer"><span class="flex-row">View on GitHub<i
                     class="material-icons md-18 open-new-icon">open_in_new</i></span>
             <small>github/oblivionguild</small></a>
     </nav>
