--- a/pages/streams.html
+++ b/pages/streams.html
@@ -51,10 +51,10 @@
     }
 
     function handleOffline() {
-      document.getElementById("twitch").classList.add('hide');
+      document.getElementById("twitch").classList.remove('hide');
       player.removeEventListener(Twitch.Player.OFFLINE, handleOffline);
       player.addEventListener(Twitch.Player.ONLINE, handleOnline);
-      player.setMuted(true);
+      player.setMuted(false);
     }
   </script>
 
